result/VC/PENesting2
./test/VC/PENesting2:1: error: xmlParseStartTag: invalid element name
<!ENTITY % p1 "(A|B">
^
./test/VC/PENesting2:1: error: Extra content at the end of the document
<!ENTITY % p1 "(A|B">
^
